# nndex

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
benches/: batch.rs  fit.rs  predict.rs
benches/common/: mod.rs
cli/: pyproject.toml
cli/nndex_cli/: chunker.py  embed.py  http_provider.py  index.py  main.py  search.py
cli/tests/: test_chunker.py  test_embed.py  test_search.py
notebooks/: accuracy_vs_numpy.ipynb  benchmark_cpu_ann_vs_exact.ipynb  benchmark_cpu_vs_numpy.ipynb  cpu_ann_vs_exact.ipynb  dataframe_query_demo.ipynb  disk_loading_pipeline.ipynb  load_embeddings_directly_into_rust_from_parquet.ipynb  python_bindings_demo.ipynb
python/nndex/: __init__.py
python_benchmarks/: batch_predict.py  common.py  fit.py  predict.py
src/: approx.rs  cpu.rs  gpu.rs  lib.rs  profiles.rs  python_bindings.rs  python_io.rs  topk.rs
src/shaders/: dot_highdim.wgsl  dot_lowdim.wgsl
tests_python/: test_accuracy_vs_numpy.py  test_bindings.py
