[build-system]
requires = ["maturin>=1.11.5,<1.12"]
build-backend = "maturin"

[project]
name = "nndex"
version = "0.1.0"
description = "Fast cosine similarity with CPU/GPU Rust backends"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=1.0"]

[tool.maturin]
python-source = "python"
module-name = "nndex._nndex"
features = ["python-extension"]
