[build-system]
requires = ["maturin>=1.11.5,<1.12"]
build-backend = "maturin"

[project]
name = "nndex"
version = "0.2.1"
authors = [{ name = "Max Woolf", email = "max@minimaxir.com" }]
readme = "README.md"
license = { text = "MIT" }
description = "In-memory nearest neighbor search engine for Python, implemented in Rust."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=1.0"]

[tool.maturin]
python-source = "python"
module-name = "nndex._nndex"
# macOS only: blas-accelerate links Apple Accelerate for faster batch search.
features = ["python-extension", "blas-accelerate"]
