[project]
name = "nndex-cli"
version = "0.1.0"
description = "CLI tool for code search using nndex and embeddinggemma"
requires-python = ">=3.11"
dependencies = [
    "nndex",
    "heylookitsanllm",
    "orjson>=3.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
nndex = "nndex_cli.main:main"

[tool.uv.sources]
nndex = { path = ".." }
heylookitsanllm = { path = "../../heylookitsanllm" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
