[project]
name = "nndex-cli"
version = "0.1.0"
description = "CLI tool for code search using nndex and embeddinggemma"
requires-python = ">=3.11"
dependencies = [
    "nndex",
    "orjson>=3.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
mlx = ["heylookitsanllm"]
test = ["pytest>=8"]

[project.scripts]
nndex = "nndex_cli.main:main"

[tool.uv.sources]
nndex = { path = ".." }
heylookitsanllm = { git = "https://github.com/fblissjr/heylookitsanllm" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "heylookitsanllm",
]
